anvil-tera-derive/tests/compile_fail/incorrect_format.stderr
error: Expected #[template(...)] attribute list format, e.g., #[template(path = "template.html", tera = TEMPLATES)]
  --> $DIR/incorrect_format.rs:8:1
   |
8  | #[derive(Serialize, Template)]
   | ^
